# Algo-Catalyst

./: .clang-format  .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  backtest.sh  config.json  requirements.txt  visualize.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: aggressive.json  breakout.json  conservative.json  meanrev.json
data/: synthetic_catalyst.csv  tick_data.csv
docs/: indicators.md  performance_metrics.md  strategies.md
include/: AI_Regime.h  ConfigLoader.h  Engine.h  Events.h  Indicators.h  PerformanceAnalyzer.h  Strategy.h  Version.h
scripts/: backtest_report.py  batch_backtest.sh  compare_strategies.py  correlation_analysis.py  duration_analysis.py  export_metrics.py  generate_data.py  heatmap.py  monte_carlo.py  optimize_params.py  plot_mae_mfe.py  plot_performance.py  pnl_calendar.py  regime_breakdown.py  sharpe_tearsheet.py  streaks.py  walk_forward.py
src/: AI_Regime.cpp  Engine.cpp  Indicators.cpp  Strategy.cpp  main.cpp
tests/: main.cpp  runner.h  test_config.cpp  test_engine.cpp  test_indicators.cpp  test_performance.cpp  test_regime.cpp
